--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   get: ^4.6.5
+  screenshot: ^1.3.0
+  path_provider: ^2.0.11
+  share_plus: ^6.3.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
